<resources>
    <string name="app_name">MobileTest</string>
    <string name="choose_you_city">choose you city</string>
    <string name="ok">ok</string>
    <string name="City">City Name :%s</string>
    <string name="Temperature">Temperature :%s K</string>
    <string name="Humidity">Humidity :%s RH</string>
    <string name="city">City : ?</string>
    <string name="temp">Temperature : ? K</string>
    <string name="hum">Humidity : ? RH</string>


</resources>